# held

./: .gitignore  Cargo.toml  Snakefile  benchmark.py  pyproject.toml
.github/workflows/: CI.yml
math/: carrying_capacity.mpl  piecewise_exponential.mpl  second_introductions.mpl
plots/: 00-benchmark_ld_compute.pgf  00-benchmark_ld_compute.py  01-msprime_simulation_prediction.py  01-msprime_simulation_zscores.py  02-msprime_simulation_secondary_introduction.py
plots/01-msprime_simulation_prediction/: bottleneck.pgf  carrying_capacity.pgf  constant.pgf  decline.pgf  growth.pgf  invasion.pgf
plots/02-msprime_simulation_secondary_introduction/: scenario_1.pgf  scenario_2.pgf  scenario_3.pgf  scenario_4.pgf
python/held/: __init__.py  ld.py  predictions.py
python/tests/: benchmark.py  predictions.py  test_all.py  test_linkage_disequilibrium.py  test_predictions.py
results/pickles/msprime/carrying_capacity/: 5000_10000_100_25_75.pkl  5000_10000_100_50_75.pkl  5000_10000_10_25_75.pkl  5000_10000_10_50_75.pkl  5000_10000_25_75_10.pkl  5000_10000_25_75_100.pkl  5000_10000_50_75_10.pkl  (+1 more)
results/tables/: 00-benchmark_ld_compute.csv
scripts/: 00-benchmark_ld_compute.py  01-msprime_simulation_constant.py  01-msprime_simulation_constant_fixed_mutations.py  01-msprime_simulation_exponential_fixed_mutations.py  01-msprime_simulation_invasion_fixed_mutations.py  01-msprime_simulation_three_epochs_carrying_capacity.py  01-msprime_simulation_three_epochs_fixed.py  02-msprime_simulation_secondary_introduction.py  03-simulation_constant_mle.py
src/: lib.rs
(+30 files in other folders)
