[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "held"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "jax>=0.4.13",
    "numpy>=1.24.4",
]
[project.optional-dependencies]
tests = [
    "pytest",
]
[tool.maturin]
python-source = "python"

[dependency-groups]
dev = [
    "ipython>=8.12.3",
    "msprime>=1.3.1",
    "pytest>=8.3.5",
    "tskit>=0.5.7",
]
